Tue Apr 13 08:53:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL3/ImpliedIDL/All/convert.idl:
          Disabled some parts for LwCCM

Tue Apr 13 07:03:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.h
        * ciao/Servants/Servant_Impl_Base.h
          Enabled some types for LwCCM

Mon Apr 12 18:39:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp
        * ciao/Servants/Connector_Servant_Impl_Base.h
        * ciao/Servants/Home_Servant_Impl_Base.cpp
        * ciao/Servants/Home_Servant_Impl_Base.h
          Disabled some more code with LwCCM

Mon Apr 12 18:29:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp (remove):
          Reworked to work with LwCCM

Mon Apr 12 18:15:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.cpp:
        * ciao/Servants/Servant_Impl_Base.h:
          Reworked consumer table to work with LwCCM

Mon Apr 12 17:48:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/Servants/Connector_Servant_Impl_Base.h:
          Reworked facet table to work with LwCCM

        * ciao/Servants/Servant_Impl_Base.cpp:
        * ciao/Servants/Servant_Impl_Base.h:
          Removed code which is already in the base class

Mon Apr 12 12:33:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Benchmark/RoundTrip/client.cpp:
          Const change

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/Servants/Servant_Impl_Base.cpp:
          Use regular guards instead of rw guards

Mon Apr 12 12:20:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Benchmark/Multi_Threaded/Client_Task.cpp
        * performance-tests/Benchmark/RoundTrip/client.cpp